--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
   </properties>
 
   <dependencies>
+
   <dependency>
     <groupId>log4j</groupId>
     <artifactId>log4j</artifactId>
@@ -36,6 +37,15 @@
       <artifactId>junit</artifactId>
       <version>4.12</version>
     </dependency>
+      <!-- https://mvnrepository.com/artifact/org.postgresql/postgresql -->
+      <dependency>
+          <groupId>org.postgresql</groupId>
+          <artifactId>postgresql</artifactId>
+          <version>42.2.16</version>
+      </dependency>
+
+
+
   </dependencies>
         <build>
             <plugins>
