--- a/pom.xml
+++ b/pom.xml
@@ -15,8 +15,15 @@
   </properties>
 
   <dependencies>
+      <!-- https://mvnrepository.com/artifact/org.freemarker/freemarker -->
+      <dependency>
+          <groupId>org.freemarker</groupId>
+          <artifactId>freemarker</artifactId>
+          <version>2.3.30</version>
+      </dependency>
 
-  <dependency>
+
+      <dependency>
     <groupId>log4j</groupId>
     <artifactId>log4j</artifactId>
     <version>1.2.17</version>
