--- a/pom.xml
+++ b/pom.xml
@@ -15,12 +15,13 @@
   </properties>
 
   <dependencies>
-      <!-- https://mvnrepository.com/artifact/org.freemarker/freemarker -->
+      <!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
       <dependency>
-          <groupId>org.freemarker</groupId>
-          <artifactId>freemarker</artifactId>
-          <version>2.3.30</version>
+          <groupId>commons-io</groupId>
+          <artifactId>commons-io</artifactId>
+          <version>2.6</version>
       </dependency>
+
 
 
       <dependency>
